<resources>
    <string name="app_name">Major Project</string>
    <string name="action_settings">Settings</string>
    <string name="message_hint">Enter message…</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="reply">Reply</string>
    <string name="about">About</string>
    <string name="about_description">This application is submitted as the major project in the department of Information Technology, ADGITM.</string>
    <string name="about_webservice"> </string>
    <string name="about_compression">Due to the nature of Steganography, images transmitted with messaging apps that compress attachments, e.g. Facebook\'s Messenger, won\'t contain the hidden message.</string>
    <string name="about_developer">Developed by- \n \n
    - Tanmay Grover \n
         ( 03196203116 ) \n \n
    - Paridhi Saluja \n
          ( 41096203116 ) \n \n
    - Arushi Sajwan \n
         ( 41196203116 ) \n \n
    - Radhika Bhatia \n
         ( 41696203116 ) \n
    </string>
    <string name="decoded_message">Decoded Message</string>
    <string name="imageButtonDescription">Select an image</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In accumsan, eros vel sollicitudin posuere.</string>
    <string name="encoded_image">Encoded Image</string>
    <string name="send_image">Send Image</string>
    <string name="cancel">Cancel</string>
    <string name="logo">Logo</string>
    <string name="filepath">Filepath:</string>
</resources>
