<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="left"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/tanmay" />
        <ImageView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/paridhi" />
        <ImageView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/arushi" />
        <ImageView
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/radhika" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_webservice"
        android:paddingBottom="@dimen/activity_vertical_margin"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_developer"/>
</LinearLayout>